# ttt-workshop-cnn

./: .buildinfo  .gitignore  README.md  SLIDES_README.md  _config.yml  genindex.html  intro.html  objects.inv  prompt.md  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: jupyterbook.yml
_sources/: intro.ipynb  intro.md
_sources/exercises/: conv_gaussian_filter.ipynb  manual_convolution.ipynb  optuna_tuning.ipynb  unet_bbbc039_pair_programming.ipynb
_sources/flipped_classroom/: CNN_under_the_hood.ipynb  README.md  ex_conv_gaussian_filter.ipynb  ex_conv_gaussian_filter_solution.ipynb  ex_manual_convolution.ipynb  ex_receptive_field.ipynb
_sources/pair_programming/: README.md  optuna_tuning.ipynb  unet_bbbc039_pair_programming.ipynb
_sources/slides/: README.md  lecture_slides.ipynb
book/: _config.yml  _toc.yml  intro.md
book/exercises/: conv_gaussian_filter.ipynb  manual_convolution.ipynb  optuna_tuning.ipynb  unet_bbbc039_pair_programming.ipynb
book/flipped_classroom/: CNN_under_the_hood.ipynb  ex_conv_gaussian_filter.ipynb  ex_manual_convolution.ipynb
book/pair_programming/: README.md  optuna_tuning.ipynb  unet_bbbc039_pair_programming.ipynb
book/self_teach/: hyperparameters.ipynb  unet_concepts.ipynb
book/slides/: README.md  lecture_slides.ipynb  lecture_slides.slides.html
exercises/: conv_gaussian_filter.html  manual_convolution.html  optuna_tuning.html  unet_bbbc039_pair_programming.html
flipped_classroom/: CNN_under_the_hood.html  README.html  ex_conv_gaussian_filter.html  ex_conv_gaussian_filter_solution.html  ex_manual_convolution.html  ex_receptive_field.html
pair_programming/: README.html  optuna_tuning.html  unet_bbbc039_pair_programming.html
self_teach/: hyperparameters.html  unet_concepts.html
slides/: README.html  flipped_classroom.html  lecture_slides.html
src/ttt_workshop_cnn/: __init__.py  utils.py
tests/: test_utils.py
