[build-system]
requires = [
  "setuptools>=64",
  "setuptools_scm[toml]>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "ttt-workshop-cnn"
description = "Utilities for the TTT CNN workshop (data helpers, reproducibility, simple image ops)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "TTT CNN Contributors" }
]
dynamic = ["version"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
dependencies = [
  # Core scientific stack used in notebooks and utilities
  "numpy",
  "scipy",
  "matplotlib",
  "ipympl",
  "ipywidgets",
  "scikit-image",
  "scikit-learn",
  "torch",
  "torchinfo",
  "optuna",
  "plotly",
  "tqdm",

  # Deep learning + experimentation
  "torch",
  "optuna",
  "torchsummary",
  "ipykernel",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "black",
]
book = [
  # Build the Jupyter Book documentation site
  "jupyter-book>=1.0.0",
]

[project.urls]
Repository = "https://github.com/thawn/ttt-workshop-cnn"
Issues = "https://github.com/thawn/ttt-workshop-cnn/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "ttt_workshop_cnn._version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ttt_workshop_cnn*"]
namespaces = true

[tool.black]
target-version = ["py39", "py310", "py311", "py312"]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py39"
lint.select = ["E", "F", "I", "UP", "B"]
lint.ignore = ["E203", "E266", "E501"]

[tool.setuptools_scm]
# Generate a version file inside the package at build/install time
write_to = "src/ttt_workshop_cnn/_version.py"
fallback_version = "0.0.0"
